--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,5 @@ http://www.sqlalchemy.org/trac/wiki/Contributors
 
 Major contributing authors include(sqlalchemy_jdbcapi):
 - Danesh Patel <danesh_patel@outlook.com>
-
+- Pavel Henrykhsen <pavel.henrykhsen@outlook.com>
 
